--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "watch": "ng build --watch --configuration development",
+    "watch": "ng build --watch --configuration=development",
     "test": "ng test",
-    "prod": "ng build --configuration production"
+    "build-prod": "ng build --configuration=production"
   },
   "private": true,
   "dependencies": {
